- Set pointer cursor on buttons - Add eventlistener for closing dialog to dialog cancel button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="formElement buttons">
                         <input type="submit" value="Yalla!" id="submit">
-                        <input type="reset" value="Cancel" id="cancel">
+                        <input type="reset" value="Cancel" id="reset">
                      </div>
                 </form>
             </dialog>
