--- a/index.html
+++ b/index.html
@@ -61,5 +61,9 @@
         </div>
 
     </div>
+
+    <div class="footer">
+        <div class="credits">( copyright&copy; by <a href="https://github.com/niccostantini/">@niccostantini</a> ) = <b>false</b> – <a href="https://github.com/niccostantini/"><img src="./assets/images/github.svg" height="20" width="20"></a></div>
+    </div>
 </body>
 </html>
